fix z-index on modal css

--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -8,7 +8,7 @@
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  z-index: 1000;
+  z-index: 2000;
   display: none;
 }
 
